<resources>
    <string name="app_name">Utility App</string>
    <string name="welcomeText">Welcome to Unit Converter. Please select a unit type.</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="amount">Enter amount</string>
    <string name="return_home">Return Home</string>
    <string name="small_font">Small Font</string>
    <string name="medium_font">Medium Font</string>
    <string name="large_font">Large Font</string>
    <string name="accept">Accept</string>
    <string-array name="temperatures">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="weights">
        <item>Kilogram</item>
        <item>Pound</item>
        <item>Newton</item>
    </string-array>
    <string-array name="distances">
        <item>Meter</item>
        <item>Feet</item>
        <item>Yard</item>
    </string-array>

</resources>
