<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textSize="42sp"
        />

    <Button
        android:id="@+id/temperatureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_weight="1"
        android:text="@string/temperature"
        />

    <Button
        android:id="@+id/weightButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_weight="1"
        android:text="@string/weight"
        />

    <Button
        android:id="@+id/distanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_weight="1"
        android:text="@string/distance"
        />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_weight="1"
        android:text="@string/settings"
        />

</LinearLayout>